# ai-leadsheet

./: .gitignore  CLAUDE.md  DESIGN_VISION.md  PRD.md  README.md  VISION.md  chart.xml  main.py  nixpacks.toml  pyproject.toml  railway.toml
backend/: auth.py  main.py  stripe_routes.py
frontend/: chart.html  dashboard.html  index.html  privacy.html  settings.html  soloact-analytics.js  soloact-chords.js  terms.html
leadsheet/: analysis.py  audio.py  chord_detector.py  claude_lesson.py  cli.py  export.py  midi.py  simplify.py  theory.py
