[project]
name = "ai-leadsheet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basic-pitch>=0.3.0",
    "fastapi>=0.128.8",
    "filetype>=1.2.0",
    "mido>=1.3.3",
    "music21>=8.3.0",
    "onnxruntime>=1.24.2",
    "python-multipart>=0.0.20",
    "resend>=2.23.0",
    "rich>=14.3.3",
    "setuptools>=82.0.0",
    "slowapi>=0.1.9",
    "typer>=0.23.2",
    "uvicorn>=0.39.0",
    "supabase>=2.0.0",
    "yt-dlp>=2024.0.0",
    "stripe>=10.0.0",
    "anthropic>=0.30.0",
]
